Fix aside items width on iPhone 4S and smaller

--- a/scss/md2.scss
+++ b/scss/md2.scss
@@ -635,6 +635,7 @@ footer.md2-footer {
     }
 
     aside.md2-aside nav.md2-menu div {
-        padding: 12px 20px;
+        width: 70px;
+        padding: 12px 10px;
     }
 }
